Complete rework of economy and workzone required fields